2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-17  Andras Varga

	* tkapp.cc: enable output (set disable_tracing=false) before calling
	finish()

2004-07-06  Andras Varga

	* tkapp.cc: fixed Speedometer usage

2004-06-21   Andras Varga

	* visitor.cc/h: converted pattern matching to use new cPatternMatcher.

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

FIXME make inspectors more consistent:
  ObjectInspector's "info" page should appear also in ContainerInspector (and maybe other inspectors as well)
  ObjectInspector (and all inspectors) should allow name change
  info() and detailedInfo() should appear in all inspectors somewhere
  cWatchInspector: if cPolymorphic is watched, display its info() and detailedInfo()
  cWatchInspector probably not needed (cObjectInspector will do)
FIXME cGate inspectors have now two "up" buttons!!!
TBD there should be a limit on the number of inspector windows open, to prevent
accidentally opening thousand windows with objects of identical names
TODO: Need display string option to turn off module labels
TODO: need <Copy> icon on module output window toolbars
TODO: treeview into each object inspector!
TODO: BUSY cursor!!! at network setup, callfinish, inspector refresh,etc
TODO: needed function: "express run until next event in this module"
TODO: needed new mode: express run for other modules, fast/normal for this module
FIXME: container inspector listboxes: always prints "0 objects"
FIXME: "r=" bug: if I also have "q=queue" or "t=some text" tags, the circle 
is no longer centered around the icon
TODO: page should also display className(), info() etc of control info object


2004-04-20  Andras Varga

	* added "Control Info" page into cMessage inspector.

2004-03-18  Andras Varga

	* structinsp.cc: display getFieldsAsString() also for structs (that is,
	its operator<< is used to display a one-line brief of the struct)
